--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "set NODE_ENV=development && webpack-dev-server --config webpack.dev.js",
     "build": "set NODE_ENV=production && webpack --config webpack.prod.js"
   },
-  "homepage": "/",
+  "homepage": ".",
   "eslintConfig": {
     "parser": "babel-eslint",
     "extends": "airbnb-base",
@@ -19,6 +19,9 @@
       "commonjs": true,
       "es6": true
     },
+    "ignorePatterns": [
+      "build/*"
+    ],
     "rules": {
       "comma-dangle": [
         "error",
@@ -54,7 +57,9 @@
     "babel-loader": "^8.1.0",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
+    "escape-string-regexp": "^4.0.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-loader": "^4.0.2",
@@ -71,6 +76,7 @@
     "postcss-normalize": "^9.0.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-safe-parser": "^4.0.2",
+    "preload-webpack-plugin": "^3.0.0-beta.3",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
@@ -81,5 +87,6 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^5.0.9"
-  }
+  },
+  "dependencies": {}
 }
